test/spec_vectors/simd_bitwise/fail/module_20.wat
(module (func $v128.and-arg-empty (result v128) (v128.and)))